--- a/src/app.css
+++ b/src/app.css
@@ -19,6 +19,7 @@
         /* ========== Spacing/Width ========== */
         --width-25: 25rem;
         --spacing-7-5: 1.875rem;
+        --height-14-375: 14.375rem;
 
         /* ========== Typography ========== */
         --font-size-3xl: 2rem;
@@ -41,6 +42,10 @@
         width: var(--width-25);
     }
 
+    .min-height-14\.375 {
+        min-height: var(--height-14-375);
+    }
+
     .p-7\.5 {
         padding: var(--spacing-7-5);
     }
@@ -51,5 +56,13 @@
 
     .rounded-10 {
         border-radius: var(--radius-10);
+    }
+
+    .black-to-cyan-gradient {
+        background: linear-gradient(135deg, #0b0b0f 0%, #162729);
+    }
+
+    .black-gradient {
+        background: linear-gradient(132.15deg, #0b0b0f 0%, rgba(26, 26, 34, 0.9) 95.96%);
     }
 }
