[feat]: add collapsible items below search box

--- a/src/app.css
+++ b/src/app.css
@@ -42,7 +42,7 @@
         width: var(--width-25);
     }
 
-    .min-height-14\.375 {
+    .min-h-14\.375 {
         min-height: var(--height-14-375);
     }
 
